     * EtherApe now builds natively on CENTOS5/RHEL5. 
     * rewrote spec file for use with OpenSUSE Build Service.
     * updated documentation.
     * removed several (harmless) compiler warnings to make packager's life 
       easier.
     * imported debian-specific patches and a swedish translation by Daniel
       Nylander.


  Overview of changes in EtherApe 0.9.10 (Sunday Feb 06, 2011):
   The most notable change is IPV6 support, thanks to David Flamand.
   EtherApe now computes average packet size, to better estimate network
   usage.
   The new option --min-delay allows slow-motion replay of a capture file.

   In 0.9.9 relnotes I forgot to mention a fix from Sotiris Sotiropoulos.
   Many apologies for the mistake.
   
   Note: the old non-threaded name resolver is deprecated and will be
   removed on the next release. If you really need it, speak up *now*.
   Works only with IPV4 addresses, anyway.

   Changes summary:
     * IPV6 support, thanks to David Flamand.
     * new statistic: average packet size.
     * added option --min-delay, to complement --max-delay when
       replaying from file. With this option you can replay a capture
       in slow-motion.
     * tweaked default service file, adding some common ports.
     * added check for invalid proto-color mappings (debian bug 566226).
     * removed bogus double assignement. Thanks to "johndoe123321".

   Important: CVS repository shutdown
     Effective from today, EtherApe CVS is no longer accessible.
     Plese refer to the Mercurial repository.


  Overview of changes in EtherApe 0.9.9 (Monday Jan 04, 2010):
   The most interesting change of this release is *basic* 802.11 WLAN support.
   WLAN is one of the most complex protocols around ('crazy' sometimes seems a 
   better description) and there's no way to support it completely without a 
   dedicated display mode.
   As an example, a single WLAN packet could contain up to four (4) addresses,