@@ -56,7 +56,6 @@ void on_ok_pref_button_clicked (GtkButton * button, gpointer user_data);
 void on_cancel_pref_button_clicked (GtkButton * button, gpointer user_data);
 
 void on_group_unk_check_toggled (GtkToggleButton * togglebutton, gpointer);
-void on_cycle_toggle_toggled (GtkToggleButton * togglebutton, gpointer udata);
 void on_numeric_toggle_toggled (GtkToggleButton * togglebutton, gpointer user_data);
 
 /* proto color tab callbacks */
